Responsividade Completa e Adição do Menu Mobile

--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
 
             <a href="#contact" class="contact">Contact Us</a>
 
+            <input type="checkbox" id="hamburguer-menu">
+
+            <label for="hamburguer-menu">
+
+            <div class="mobile-menu">
+
+                <span class="hamburguer"></span>
+
+            </div>
+
+            </label>
+
+            <div class="sidebar">
+
+                <nav class="nav-menu2">
+                    <a href="#home" class="item-menu2 active">Home</a>
+                    <a href="#invest" class="item-menu2">Invest</a>
+                    <a href="#community" class="item-menu2">Community</a>
+                    <a href="#about" class="item-menu2">About</a>
+                </nav>
+
+                <a href="#contact" class="contact2">Contact Us</a>
+
+            </div>
+
+            <div class="overlay"></div>
+
         </div>
 
     </header>
@@ -209,7 +236,7 @@
                     
                     <p>Access to a network of knowledge and experiences.</p>
 
-                    <br><br><br><br><br><br><br>
+                    <div class="space"><br><br><br><br><br><br><br></div>
 
                     <h4>Trends</h4>
 
@@ -229,7 +256,7 @@
                     
                     <p>A range of investment opportunities to diversify your portfolio.</p>
 
-                    <br><br><br><br><br><br><br>
+                    <div class="space"><br><br><br><br><br><br><br></div>
 
                     <h4>Networking</h4>
 
