Correção de alguns problemas nas versões mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="header-container">
 
-            <a href="index.html" class="logo"><img src="img/Logo.svg" width="75" alt="Logo Crypto"></a>
+            <a href="index.html" class="logo"><img src="img/Logo.svg" alt="Logo Crypto"></a>
 
             <nav class="nav-menu">
                 <a href="#home" class="item-menu active">Home</a>
